коррекция сниппетов. +WccMain

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Подключаем BaseComponent глобально -->
   <script type="module" src="wcc/_wcc/BaseComponent.js"></script>
   <!-- wcc/** -->
-   <script data-wcc type="module" src="wcc/WccMain/WccMain.js"></script>
+  <script data-wcc type="module" src="wcc/WccMain/WccMain.js"></script>
   <!--  -->
   <script type="module" src="js/main.js"></script>
 
@@ -22,8 +22,12 @@
 
 <body>
 
-  <wcc-main>тут-слот</wcc-main>
+  <div style="width: 50%; margin: 0 auto; padding: 20px;">
+    <wcc-main>
+      тут-слот
+    </wcc-main>
 
+  </div>
 
 </body>
 
