--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script type="module" src="wcc/_wcc/BaseComponent.js"></script>
   <!-- wcc/** -->
   <script data-wcc type="module" src="wcc/WccMain/WccMain.js"></script>
+  <script data-wcc type="module" src="wcc/WccContent/WccContent.js"></script>
   <!--  -->
   <script type="module" src="js/main.js"></script>
 
@@ -27,6 +28,9 @@
       тут-слот
     </wcc-main>
 
+    <wcc-content>
+      тут-слот
+    </wcc-content>
   </div>
 
 </body>
