обошел. проблему с пустым шаблоном

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 
 <body>
 
-  <div style="width: 50%; margin: 0 auto; padding: 20px;">
+  <div style="width: 90%; margin: 0 auto; padding: 20px;">
+
     <wcc-main>
-      тут-слот
+
+      <wcc-content>тут-content-слот</wcc-content>
+
     </wcc-main>
 
-    <wcc-content>
-      тут-слот
-    </wcc-content>
   </div>
 
 </body>
