--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <link href="css/style.css" rel="stylesheet">
 
   <!-- Подключаем BaseComponent глобально -->
-  <script type="module" src="wcc/base/BaseComponent.js"></script>
+  <!-- <script type="module" src="wcc/base/BaseComponent.js"></script> -->
+  <script type="module" src="https://illicchpv.github.io/wcc-father/wcc/base/BaseComponent.js"></script>
   <!-- wcc/** -->
   <script data-wcc type="module" src="wcc/WccMain/WccMain.js"></script>
   <script data-wcc type="module" src="wcc/WccContent/WccContent.js"></script>
