в док добавлено ## 18. Сравнение с Lit

--- a/wcc/WccNavBar/WccNavBar.html
+++ b/wcc/WccNavBar/WccNavBar.html
@@ -4,7 +4,7 @@
     align-items: center;
     gap: 10px;    
   }
-  .wccNavBar__img {}
+  /* .wccNavBar__img {} */
   .wccNavBar__navBlock {
     display: contents;
   }
@@ -14,7 +14,7 @@
     gap: 10px;
     margin-left: auto;
   }
-  .wccNavBar__link {}
+  /* .wccNavBar__link {} */
 </style>
 <div class="wccNavBar container">
   <img  class="wccNavBar__img" src="img/logo.svg" alt="">
