--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
   <link href="css/style.css" rel="stylesheet">
 
   <!-- Подключаем BaseComponent глобально -->
-  <!-- <script type="module" src="wcc/base/BaseComponent.js"></script> -->
-  <script type="module" src="https://illicchpv.github.io/wcc-father/wcc/base/BaseComponent.js"></script>
+  <script type="module" src="wcc/base/BaseComponent.js"></script>
+  <!-- <script type="module" src="https://illicchpv.github.io/wcc-father/wcc/base/BaseComponent.js"></script> -->
   <!-- wcc/** -->
-  <!-- <script data-wcc type="module" src="wcc/WccMain/WccMain.js"></script> -->
-  <!-- <script data-wcc type="module" src="wcc/WccContent/WccContent.js"></script> -->
-
-  <script data-wcc type="module" src="wcc/WccNavBar/WccNavBar.js"></script>
-  <script data-wcc type="module" src="wcc/WccNavLink/WccNavLink.js"></script>
+  <script data-wcc type="module" src="wcc/WccMain/WccMain.js"></script>
+  <!-- <script data-wcc type="module" src="https://illicchpv.github.io/wcc-father/wcc/WccMain/WccMain.js"></script> -->
+  <script data-wcc type="module" src="wcc/WccContent/WccContent.js"></script>
+  <!-- <script data-wcc type="module" src="https://illicchpv.github.io/wcc-father/wcc/WccContent/WccContent.js"></script> -->
 
   <!--  -->
   <script type="module" src="js/main.js"></script>
@@ -28,26 +27,13 @@
 
 <body>
 
-  <!-- <wcc-nav-bar>
-  </wcc-nav-bar> -->
-
   <div style="width: 90%; margin: 0 auto; padding: 20px;">
 
-    <wcc-nav-link href="#">
-      home
-    </wcc-nav-link>
-    <!-- <wcc-nav-link href="#home" href-list="#!,index.html">
-      home
-    </wcc-nav-link> -->
-    <wcc-nav-link href="#about">
-      about
-    </wcc-nav-link>
-
-    <!-- <wcc-main>
+    <wcc-main>
 
       <wcc-content>тут-content-слот</wcc-content>
 
-    </wcc-main> -->
+    </wcc-main>
 
   </div>
 
