+ wcc=min0-class снипет +  BaseComponent.register исправления

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script type="module" src="wcc/base/BaseComponent.js"></script>
   <!-- <script type="module" src="https://illicchpv.github.io/wcc-father/wcc/base/BaseComponent.js"></script> -->
   <!-- wcc/** -->
-  <!-- <script data-wcc type="module" src="wcc/WccMain/WccMain.js"></script> -->
+  <script data-wcc type="module" src="wcc/WccMain/WccMain.js"></script>
   <!-- <script data-wcc type="module" src="https://illicchpv.github.io/wcc-father/wcc/WccMain/WccMain.js"></script> -->
   <script data-wcc type="module" src="wcc/WccContent/WccContent.js"></script>
   <!-- <script data-wcc type="module" src="https://illicchpv.github.io/wcc-father/wcc/WccContent/WccContent.js"></script> -->
@@ -29,13 +29,11 @@
 
   <div style="width: 90%; margin: 0 auto; padding: 20px;">
 
-    <!-- <wcc-main>
+    <wcc-main>
 
       <wcc-content>тут-content-слот</wcc-content>
 
-    </wcc-main> -->
-
-    <wcc-content></wcc-content>
+    </wcc-main>
 
   </div>
 
