--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <!-- <script data-wcc type="module" src="https://illicchpv.github.io/wcc-father/wcc/WccMain/WccMain.js"></script> -->
   <script data-wcc type="module" src="wcc/WccContent/WccContent.js"></script>
   <!-- <script data-wcc type="module" src="https://illicchpv.github.io/wcc-father/wcc/WccContent/WccContent.js"></script> -->
+  <script data-wcc type="module" src="wcc/WccSkills/WccSkills.js"></script>
 
   <!--  -->
   <script type="module" src="js/main.js"></script>
@@ -29,11 +30,13 @@
 
   <div style="width: 90%; margin: 0 auto; padding: 20px;">
 
-    <wcc-main>
+    <!-- <wcc-main>
 
       <wcc-content>тут-content-слот</wcc-content>
 
-    </wcc-main>
+    </wcc-main> -->
+
+    <wcc-skills></wcc-skills>
 
   </div>
 
