--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
   <!-- <script data-wcc type="module" src="https://illicchpv.github.io/wcc-father/wcc/WccMain/WccMain.js"></script> -->
   <script data-wcc type="module" src="wcc/WccContent/WccContent.js"></script>
   <!-- <script data-wcc type="module" src="https://illicchpv.github.io/wcc-father/wcc/WccContent/WccContent.js"></script> -->
-  <script data-wcc type="module" src="wcc/WccSkills/WccSkills.js"></script>
 
   <!--  -->
   <script type="module" src="js/main.js"></script>
@@ -30,13 +29,11 @@
 
   <div style="width: 90%; margin: 0 auto; padding: 20px;">
 
-    <!-- <wcc-main>
+    <wcc-main>
 
       <wcc-content>тут-content-слот</wcc-content>
 
-    </wcc-main> -->
-
-    <wcc-skills></wcc-skills>
+    </wcc-main>
 
   </div>
 
