--- a/wcc/WccContent/WccContent.html
+++ b/wcc/WccContent/WccContent.html
@@ -1,9 +1,9 @@
 <style>
   .wccContent {
-    display: inline-block; background-color: #f0f0f0;
+    display: inline-block; background-color: #7cffbd;
   }
 </style>
 <div class="wccContent">
   WccContent:
-  [<slot name=""></slot>]
+  <slot name=""></slot>
 </div>
