--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <wcc-markdown id="doc-short"  src="wcc/base/BaseComponent.DOCshort.md"></wcc-markdown>
     <wcc-markdown id="work"       src="wcc/base/BaseComponent.work.md"></wcc-markdown>
     <wcc-markdown id="plan"       src="wcc/base/BuildComponentPlan.DOC.md"></wcc-markdown>
-
+    <wcc-markdown id="react"       src="wcc/base/UseInReact.DOC.md"></wcc-markdown>
   </div>
 
 </body>
